<resources>
    <string name="app_name">Cable</string>
    <string name="title_home">Home</string>
    <string name="title_payment">Category</string>
    <string name="title_dashboard">Live</string>
    <string name="title_notifications">Profile</string>
    <string name="title_new_cart">Video</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="general_movies">General Movies</string>
    <string name="continue_watcing">Continue Watching</string>
    <string name="premiun_video">Premimum Videos</string>
    <string name="free_video">Free Videos</string>
    <string name="social_community">Social Community</string>
    <string name="my_community">My Community</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="category">Categories</string>
    <string-array name="navigation_drawer_items_array">
        <item>Home</item>
        <item>Premium plans</item>
        <item>My Profile</item>
        <item>My Channel</item>
        <item>My Videos</item>
        <item>My Playlist</item>
        <item>Refer &amp; Earns </item>
        <item>Rate App</item>
        <item>Share App</item>
        <item>Logout</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="termprivacy"><![CDATA[Terms & Privacy Policy]]></string>
    <string name="helpfeed"><![CDATA[Help & Feedback]]></string>
    <string name="video_noti">Video Notifaction</string>
    <string name="email_noti">Email Notifaction</string>
    <string name="sms_noti">SMS Notifaction</string>
    <string name="language">Language</string>
    <string name="action_settings">Settings</string>
    <string name="title_settings_dialog">Permissions Required</string>
    <string name="rationale_video_app">This app needs access to your camera and mic to make video calls</string>
    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="setting">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="connect_with">CONNECT WITH</string>
    <string name="upload_series">Upload Series</string>
    <string name="add_more_viedo">Add More Video +</string>
    <string name="add_descripition">Add  Video Description </string>
    <string name="upload_now">Upload Now</string>
    <string name="send_for">Send for Approval</string>
    <string name="memberships">Memberships</string>
    <string name="subscripation">Subscripation Plan</string>
    <string name="my_channel">My Channel</string>
    <string name="my_intro">My Intro videos</string>
    <string name="action_okay">Ok</string>
    <string name="description"><u>Description:-</u>.</string>
    <string name="txt_slct_option">Option</string>
    <string name="txt_gellery">Select video in Gallery</string>
    <string name="txt_warning">Cancel</string>
    <string name="txt_cameray">Reacord video</string>
    <string name="txt_slct_optionn">Option</string>
    <string name="txt_gelleryy">Gallery</string>
    <string name="txt_warningg">Cancel</string>
    <string name="txt_camerayy">Camera</string>
    <string name="dear_camila_rodriguez">Dear Suraj Kumar!</string>
    <string name="john_smith_is_asking_for_a_private_video_chat">Govind Kumar is Inviting You.</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="video_call">Video Call</string>
    <string name="like">Like</string>
    <string name="watch_later">Watch Later</string>
    <string name="description_movie">Description</string>
    <string name="total_view">Total view</string>
    <string name="recently_view">Recently view</string>
    <string name="view_all">VIEW ALL</string>
    <string name="cast">Cast</string>
    <string name="movie_des">11/16/2001 (US) I Adventure, Fantasy, Family I 2h 32m</string>
    <string name="movie_title">Spider man : into the spiderverse</string>
    <string name="season">Season 1</string>
    <string name="details">Stranger Things | Official Trailer | Abhishek Bachchan, Amit Sadh, Nithya Menen | July 10</string>
    <string name="bottom_sheet_peek">Bottom Sheet Peek</string>
    <string name="name">name</string>
    <string name="phone_no">9999999999</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="search_for_a_movie_tv_show_person">Search for a movie, tv show, person...</string>
    <string name="search">Search</string>
    <string name="in_process">In Progress</string>
    <string name="no_video_found">No Video Found</string>
    <string name="no_result">No Result Found</string>
    <string name="create_your_channel">Create your Channel</string>
    <string name="watch_it">Watch it</string>
    <string name="video_compress">Video getting Compress</string>
    <string name="search_user">Search user</string>
    <string name="no_data">"No Data Found "</string>
    <string name="new_episode">New Series?</string>
    <string name="sender_id"></string>
    <string name="current_version">0.9.1</string>
    <string name="splash_app_title">Sample Video Chat Java</string>
    <string name="splash_create_session_error">Create session errors:</string>
    <string name="dlg_signal_error">Disconnected… Please check your Internet connection!</string>
    <string name="dlg_relogin_wait">You are still connecting.. Please try once more</string>
    <string name="dlg_login">Login…</string>
    <string name="dlg_sign_in">Sign In…</string>
    <string name="dlg_updating_user">Updating user…</string>
    <string name="dlg_creating_new_user">Creating new user…</string>
    <string name="dlg_logout">Logout…</string>
    <string name="dlg_loading_opponents">Loading opponents…</string>
    <string name="dlg_retry">Retry</string>
    <string name="dlg_allow">Allow</string>
    <string name="login_chat_retry">Trying Relogin. Please wait a moment</string>
    <string name="notification_title">You have an active call</string>
    <string name="notification_text">Touch takes you back to the call %1$s</string>
    <string name="error">Error</string>
    <string name="error_credentials_empty">Credentials are wrong or empty. You have to set:
        Application ID, Authentification Key, Authentification Secret, Account Key in constants in App.java
        and you have to set Sender ID in the string resources to launch application.
        If you haven\'t them you can register new account and application at https://admin.quickblox.com
        then put Application credentials from Overview page + Account key from https://admin.quickblox.com/account/settings</string>
    <string name="login_data_error">Wrong login</string>
    <string name="username_data_error">Wrong username</string>
    <string name="error_max_opponents_count">You can select up to %d opponents</string>
    <string name="sign_up_error">Error creating new user, please try again</string>
    <string name="sign_in_error">Error SignIn user, please try again</string>
    <string name="sign_in_error_with_error">Sign In error. Error</string>
    <string name="sign_in_error_without_error">Sign In error</string>
    <string name="logout_user_with_error">Logout user error. Error</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_connection_error">Connection failed. Please check your internet connection.</string>
    <string name="no_responce_timeout">No response received within reply timeout</string>
    <string name="error_empty_login">Login can not be empty</string>
    <string name="error_empty_chat_room_name">Chat room name can not be empty</string>
    <string name="error_permission_video">You should allow Camera permission</string>
    <string name="error_permission_audio">You should allow Microphone permission</string>
    <string name="login_chat_login_error">Login Chat error. Please relogin. Error</string>
    <string name="update_user_error">Update user error. Error</string>
    <string name="loading_users_error">Loading users error. Error</string>
    <string name="permission_unavailable">%s is not available now!</string>
    <string name="field_name_user_login">User name</string>
    <string name="field_name_user_fullname">User Full Name</string>
    <string name="error_name_must_not_contain_special_characters_from_app">%1$s must contain 3 &#8212; %2$s alphanumeric Latin characters without spaces, the first char must be a letter</string>
    <string name="action_start_login">Done</string>
    <string name="action_screen_share">Screen share</string>
    <string name="action_update_opponens_list">Update opponents list</string>
    <string name="action_logout">Logout</string>
    <string name="action_start_video_call">Video call</string>
    <string name="action_start_audio_call">Audio call</string>
    <string name="action_dialogs_app_info">App Info</string>
    <string name="actionbar_title_settings">Settings</string>
    <string name="title_login_activity">Enter to Videochat</string>
    <string name="subtitle_text_logged_in_as">Logged in as %s</string>
    <string name="title_one_user_selected">%s user selected</string>
    <string name="tile_many_users_selected">%s users selected</string>
    <string name="incoming_call">Incoming Call</string>
    <string name="also_on_call">Also on call:</string>
    <string name="edit_opponents_list">Edit opponents list</string>
    <string name="incoming_audio_call">Incoming Audio Call</string>
    <string name="incoming_video_call">Incoming Video Call</string>
    <string name="outgoing_audio_video_call_title">%s\n\nRinging</string>
    <string name="user_list_on_call">User 1, User 2, User 3, User 4, User 5, User 6</string>
    <string name="opponent_pending">Pending</string>
    <string name="opponent_closed">Closed</string>
    <string name="text_incoming_audio_call">Incoming Audio Call</string>
    <string name="text_incoming_video_call">Incoming Video Call</string>
    <string name="text_status_connect">Connect…</string>
    <string name="text_status_checking">Checking…</string>
    <string name="text_status_connected">Connected</string>
    <string name="text_status_disconnected">Disconnected</string>
    <string name="text_status_rejected">Rejected</string>
    <string name="text_status_no_answer">No answer</string>
    <string name="text_status_hang_up">Hung up</string>
    <string name="text_status_closed">Closed</string>
    <string name="text_status_time_out">Time Out</string>
    <string name="text_status_failed">Failed</string>
    <string name="text_welcoming_message">Please enter Login and Username.</string>
    <string name="hint_user_login">Login</string>
    <string name="hint_user_full_name">Username</string>
    <string name="text_select_users_to_call">Select users you want to call</string>
    <string name="call_was_stopped_connection_lost">Call was stopped because connection was lost</string>
    <string name="connection_lost">Connection lost</string>
    <string name="text_push_notification_message">"%s is calling you"</string>
    <string name="title_video_category">Video</string>
    <string name="title_call_settings_category">Call Settings</string>
    <string name="pref_default_value">Default</string>
    <string name="pref_default_camera_key">default_camera_preference</string>
</resources>