<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="cable.social.app.activity.MainActivity"
    android:orientation="vertical"
    android:background="@color/colorbg">

    <RelativeLayout
        android:id="@+id/rl_main"
        android:layout_width="match_parent"
        android:layout_margin="10dp"
        android:background="@drawable/gray_solid_round"
        android:layout_height="50dp">
        <EditText
            android:id="@+id/search_field"
            android:layout_width="match_parent"
            android:textColorHint="@color/blue2"
            android:background="#00FFFFFF"
            android:singleLine="true"
            android:textColor="@color/colorPrimary"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="20dp"
            android:autofillHints="@string/search_user"
            android:inputType="text"
            android:hint="@string/search_user"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/search_txt"
            android:layout_width="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:text="@string/search"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_height="wrap_content"/>
    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_below="@+id/rl_main"
        android:id="@+id/recycleviewcategory"/>


    <TextView
        android:id="@+id/no_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/no_result"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:visibility="gone"
        android:gravity="center"/>


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/my_friend"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:fitsSystemWindows="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        />



</RelativeLayout>