<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorbg"
    android:orientation="vertical">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:visibility="gone">

                <ImageView
                    android:id="@+id/backbutton"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:src="@drawable/ic_arrow_back_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/backbutton"
                    android:gravity="center"
                    android:text="@string/upload_series"
                    android:textColor="@color/white"
                    android:textSize="16dp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <EditText
                android:id="@+id/searice_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_hight"
                android:layout_margin="10dp"
                android:background="@drawable/edit_text_border" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="5dp"
                card_view:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white" />


                    <ImageView
                        android:id="@+id/upload"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:padding="5dp"
                        android:src="@drawable/upload_icon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/upload"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="Upload Cover Photo"
                        android:textColor="@color/colorPrimaryText_black"
                        android:textSize="13dp"
                        android:textStyle="bold" />


                </RelativeLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="5dp"
                card_view:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/upload_introvideo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white" />


                    <ImageView
                        android:id="@+id/upload_introvide"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:padding="5dp"
                        android:src="@drawable/upload_icon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/upload_introvide"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="Upload Intro video"
                        android:textColor="@color/colorPrimaryText_black"
                        android:textSize="13dp"
                        android:textStyle="bold" />


                </RelativeLayout>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="5dp"
                card_view:cardUseCompatPadding="true">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/upload_introvideo2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white" />


                    <ImageView
                        android:id="@+id/upload_introvide2"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:padding="5dp"
                        android:src="@drawable/upload_icon" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/upload_introvide2"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="Upload Intro video"
                        android:textColor="@color/colorPrimaryText_black"
                        android:textSize="13dp"
                        android:textStyle="bold" />


                </RelativeLayout>


            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:gravity="center|right"
                android:text="@string/add_more_viedo"
                android:textColor="@color/white"
                android:textSize="12dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center|left"
                android:text="@string/add_descripition"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/add_descri"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_margin="10dp"
                android:background="@drawable/edit_text_border" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:gravity="center|left"
                android:text="Cast /Genre"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/cast"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edit_hight"
                    android:layout_margin="10dp"
                    android:layout_weight="1.4"
                    android:background="@drawable/edit_text_border" />

                <EditText
                    android:id="@+id/genre"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edit_hight"
                    android:layout_margin="10dp"
                    android:layout_weight=".6"
                    android:background="@drawable/edit_text_border" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <Button
                    android:id="@+id/uploadnow"

                    android:layout_width="0dp"
                    android:layout_height="@dimen/edit_hight"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_border"
                    android:text="@string/upload_now"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/sendforapproval"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/edit_hight"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/edit_text_border"
                    android:text="@string/send_for"
                    android:textAllCaps="false" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>